crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@functions__nested_calls.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for functions/nested_calls.cm
input_file: test_data/functions/nested_calls.cm
---
Fixture: functions/nested_calls.cm
============================================================
Source code:
fn main() -> felt {
    let x = 7;
    let result = compute(x);
    return result;
}

fn compute(x: felt) -> felt {
    return add(mul(x, 3), mul(x, 5));
}

fn add(a: felt, b: felt) -> felt {
    return a + b;
}

fn mul(a: felt, b: felt) -> felt {
    return a * b;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn main {
    entry: 0

    0:
      %0 = 7
      %1 = call 1(%0)
      return %1

  }

  // Function 1
  fn compute {
    parameters: [0]
    entry: 0

    0:
      %1 = call 3(%0, 3)
      %2 = call 3(%0, 5)
      %3 = call 2(%1, %2)
      return %3

  }

  // Function 2
  fn add {
    parameters: [0, 1]
    entry: 0

    0:
      %2 = %0 Add %1
      return %2

  }

  // Function 3
  fn mul {
    parameters: [0, 1]
    entry: 0

    0:
      %2 = %0 Mul %1
      return %2

  }

}
