crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@functions__power.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for functions/power.cm
input_file: test_data/functions/power.cm
---
Fixture: functions/power.cm
============================================================
Source code:
fn power(base: felt, exp: felt) -> felt {
    if (exp == 0) {
        return 1;
    }
    return base * power(base, exp - 1);
}

============================================================
Generated MIR:
module {
  // Function 0
  fn power {
    parameters: [0, 1]
    entry: 0

    0:
      if %1 then jump 2 else jump 1

    1:
      return 1

    2:
      %3 = %1 Sub 1
      %4 = call 0(%0, %3)
      %5 = %0 Mul %4
      return %5

  }

}
