crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@functions__reassignment_from_var.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for functions/reassignment_from_var.cm
input_file: test_data/functions/reassignment_from_var.cm
---
Fixture: functions/reassignment_from_var.cm
============================================================
Source code:
// Tests reassigning one variable with the value of another.
fn test_reassignment() -> felt {
    let x = 10;
    let y = 20;
    x = y; // Should generate a load from y's address and a store to x's address.
    return x;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test_reassignment {
    entry: 0

    0:
      %0 = 10
      %1 = 20
      store %0, %1
      return %0

  }

}
