crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@functions__return_values.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for functions/return_values.cm
input_file: test_data/functions/return_values.cm
---
Fixture: functions/return_values.cm
============================================================
Source code:
fn foo(x: felt) -> (felt, felt){
    return (x, 1);
}

============================================================
Generated MIR:
module {
  // Function 0
  fn foo {
    parameters: [0]
    entry: 0

    0:
      return (%0, 1)

  }

}
