crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@functions__simple_call.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for functions/simple_call.cm
input_file: test_data/functions/simple_call.cm
---
Fixture: functions/simple_call.cm
============================================================
Source code:
fn helper() -> felt {
    return 42;
}

fn main() -> felt {
    return helper();
}

============================================================
Generated MIR:
module {
  // Function 0
  fn helper {
    entry: 0

    0:
      return 42

  }

  // Function 1
  fn main {
    entry: 0

    0:
      %0 = call 0()
      return %0

  }

}
