crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@functions__sum_n.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for functions/sum_n.cm
input_file: test_data/functions/sum_n.cm
---
Fixture: functions/sum_n.cm
============================================================
Source code:
fn main() -> felt {
    let n = 10;
    let result = sum_n(n);
    return result;
}

fn sum_n(n: felt) -> felt {
    if (n == 0) {
        return 0;
    }
    return n + sum_n(n - 1);
}

============================================================
Generated MIR:
module {
  // Function 0
  fn main {
    entry: 0

    0:
      %0 = 10
      %1 = call 1(%0)
      return %1

  }

  // Function 1
  fn sum_n {
    parameters: [0]
    entry: 0

    0:
      if %0 then jump 2 else jump 1

    1:
      return 0

    2:
      %2 = %0 Sub 1
      %3 = call 1(%2)
      %4 = %0 Add %3
      return %4

  }

}
