crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@functions__triangular.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for functions/triangular.cm
input_file: test_data/functions/triangular.cm
---
Fixture: functions/triangular.cm
============================================================
Source code:
fn main() -> felt {
    let n = 100;
    let result = triangular(n);
    return result;
}

fn triangular(n: felt) -> felt {
    if (n == 0) {
        return 0;
    }
    return n + triangular(n - 1);
}

============================================================
Generated MIR:
module {
  // Function 0
  fn main {
    entry: 0

    0:
      %0 = 100
      %1 = call 1(%0)
      return %1

  }

  // Function 1
  fn triangular {
    parameters: [0]
    entry: 0

    0:
      if %0 then jump 2 else jump 1

    1:
      return 0

    2:
      %2 = %0 Sub 1
      %3 = call 1(%2)
      %4 = %0 Add %3
      return %4

  }

}
